# Memetic-Predictor

./: Memetic-Predictor.cabal  README.md  memes  model_architecture.json  predict.py  stack.yaml  train.py
app/: Main.hs  Mock.hs
models/: memetic-model.0.1
src/: PredictorServer.hs
src/AI/: MemeticNet.hs  Singularity.hs  meme.hs
src/AI/Singularity/: Training.hs  Utils.hs
src/AI/Singularity/Data/: Matrix.hs  Network.hs  Vector.hs
src/AI/Singularity/Examples/: Mnist.hs
