name:                Memetic-Predictor
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Antystenes/Memetic-Predictor#readme
license:             BSD3
license-file:        LICENSE
author:              Morgoth
maintainer:          piotradwan@gmail.com
copyright:           2017 Morgoth
category:            MT
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     PredictorServer
  build-depends:       base
                     , bytestring
                     , filepath
                     , http-types
                     , process
                     , text
                     , unix
                     , unordered-containers
                     , wai
                     , warp
                     , json
                     , network-uri
  default-language:    Haskell2010

executable Memetic-Predictor-Server
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       Memetic-Predictor
                     , base
                     , bytestring >= 0.10.8.1
                     , filepath >= 1.4.1.1
                     , http-types >= 0.9.1
                     , process >= 1.4.3.0
                     , unix >= 2.7.2.1
  default-language:    Haskell2010

executable Memetic-Predictor-Mock
  hs-source-dirs:      app
  main-is:             Mock.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       Memetic-Predictor
                     , base
                     , bytestring >= 0.10.8.1
                     , filepath >= 1.4.1.1
                     , http-types >= 0.9.1
                     , process >= 1.4.3.0
                     , unix >= 2.7.2.1
  default-language:    Haskell2010

test-suite Memetic-Predictor-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       Memetic-Predictor
                     , base
                     , bytestring >= 0.10.8.1
                     , filepath >= 1.4.1.1
                     , http-types >= 0.9.1
                     , process >= 1.4.3.0
                     , unix >= 2.7.2.1
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Antystenes/Memetic-Predictor
